@@ -146,7 +146,8 @@ bool Susy2LepCutflow::selectEvent(const LeptonVector& leptons, const LeptonVecto
   // In this method place all event selection cuts.
   // I have deleted Steve's so that I can build the
   // analysis up as I progress
-  int flag = nt.evt()->evtFlag[NtSys_NOM];
+  //int flag = nt.evt()->evtFlag[NtSys_NOM];
+  int flag = nt.evt()->cutFlags[NtSys_NOM];
 
   if( !passLAr(flag) )              return false;
   n_pass_LAr++;
